[package]
name = "mmal-sys"
version = "0.0.1"
authors = ["Peter Sutherland <pedrosland+mmalsys@gmail.com>"]
description = "Rust definitions for mmal"
repository = "https://github.com/pedrosland/mmal-sys"
readme = "README.md"
license = "MIT"
categories = [ "external-ffi-bindings" ]
links = "mmal"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.32.1"
