[package]
name = "mmal-sys"
version = "0.0.1"
authors = ["Peter Sutherland <pedrosland+mmalsys@gmail.com>"]
description = "Rust definitions for mmal"
repository = "https://github.com/pedrosland/mmal-sys"
readme = "README.md"
license = "MIT"
categories = [ "external-ffi-bindings" ]
links = "mmal"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.32.1", optional = true }

[features]
default = []

# Enable this feature to automatically generate bindings for the mmal headers.
# The default is to use the bindings already included in the src directory.
generate_bindings = ["bindgen"]
